--- a/index.html
+++ b/index.html
@@ -162,5 +162,6 @@
         >Frontend Mentor</a
       >. Coded by <a href="#">Rogelio Camargo</a>.
     </footer>
+		<script src="script.js"></script>
   </body>
 </html>
